<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_view_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Please input city name" />

    <TextView
        android:id="@+id/text_view_pm25"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_query_pm25"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_query"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/button_open_citylist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/allcities"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/button_defaultcity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultCity"
        android:onClick="onDefaultCityClick"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
</LinearLayout>
