<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <ImageView
        android:id="@+id/img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/air"
        android:padding="5dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positionName"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:id="@+id/tv_positionName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/tv_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/tv_pollutant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pollutant"
                android:textSize="14sp"
                android:layout_margin="5dp"
                />
            <TextView
                android:id="@+id/tv_primary_pollutant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>